Centered The Hotline number

--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -379,7 +379,7 @@ box-shadow:1px 1px 4px rgba(0,0,0,0.5);
 border-radius: 10px;
 margin-top: 15px;
 margin-bottom: 15px;
-background-color: #595959;
+background-color: #f4511e;
 color:white;
 text-shadow:  #333333 0.1em 0.1em 0.2em;
 }
