--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -340,15 +340,15 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
 
 /* container CSS*/
 
-#borders{
-border: 2px solid #333333 ;
-box-shadow:1px 1px 4px rgba(0,0,0,0.5);
-border-radius: 10px;
-margin-top: 15px;
-margin-bottom: 15px;
-background-color: #f4511e;
-color:white;
-text-shadow:  #333333 0.1em 0.1em 0.2em;
+#borders {
+    border: 2px solid #333333;
+    box-shadow: 1px 1px 4px rgba(0,0,0,0.5);
+    border-radius: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    background-color: rgb(123, 117, 114);
+    color: white;
+    text-shadow: #333333 0.1em 0.1em 0.2em;
 }
 
 
