--- a/Praesidium/Praesidium/Content/Site.css
+++ b/Praesidium/Praesidium/Content/Site.css
@@ -346,7 +346,7 @@ box-shadow:2px 2px 4px rgba(0,0,0,0.8);
     border-radius: 10px;
     margin-top: 15px;
     margin-bottom: 15px;
-    background-color: rgb(123, 117, 114);
+    background-color: #a2a2a2;
     color: white;
     text-shadow: #333333 0.1em 0.1em 0.2em;
 }
