--- a/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
@@ -1,4 +1,3 @@
-﻿@model IEnumerable<Praesidium.Data_Models.Admin.FileView>
 ﻿@{
     ViewBag.Title = "Youth";
 }
@@ -30,24 +29,4 @@
         </ul>
     </div>
 </div>
-@if (Model != null)
-{
-    foreach (var file in Model)
-    {
-        <div class="row">
-            <div class="col-md-8">
-                <div class="well">
-                    <h2 style="color:slategrey;text-align:center;"><strong>@file.Title</strong></h2>
-                    <p id="p_text">
-                        @Html.Raw(file.Description)
-                    </p>
-                    <button class="btn btn-md btn-success align-center" style="margin-left:42%;">View File</button>
-                </div>
-            </div>
-        </div>
-    }
-}
-
-
-
-
+@{ Html.RenderAction("FileList", new { id = 14 }); }
