--- a/Praesidium/Praesidium/Views/trafficking/Index.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="container-fluid text-center" style="margin-bottom:3%;">
     <div class="row">
         <div class="col-md-12">
-            <video controls="controls" height="343" poster="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.JPG" width="610"><source src="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.mp4"></source><br /><track kind="captions" label="Closed Caption" src="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.en.srt" srclang="en" type="text/plain"></track></video>
+            <video controls="controls" height="343" poster="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.JPG" width="610"><source src="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.mp4" /><br /><track kind="captions" label="Closed Caption" src="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.en.srt" srclang="en" type="text/plain" /></video>
             @*<figure class="effect-caged">
 
                     <img src="~/Content/Images/hands-tied.jpg"  style="width:100%;max-height:330px;" />
