--- a/Praesidium/Praesidium/Views/Shared/_FileItems.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_FileItems.cshtml
@@ -5,39 +5,40 @@
     foreach (var file in Model)
     {
         <div class="row well">
-                <div class="col-md-2 text-right">
-                    @{
-                        if (file.FileName.Contains(".pdf"))
-                        {
-                            <img src="~/Content/Images/pdf_icon.png" style="height: 100px; width: auto;" />
-                        }
-                        else if (file.FileName.Contains(".doc"))
-                        {
-                            <img src="~/Content/Images/doc_icon.png" style="height: 100px; width: auto;" />
-                        }
-
-
+            <div class="col-md-2 text-right">
+                @{
+                    if (file.FileName.Contains(".pdf"))
+                    {
+                        <img src="~/Content/Images/pdf_icon.png" style="height: 100px; width: auto;"/>
                     }
-                </div>
-                <div class="col-md-10">
-                    <div>
-                        <h2 style="color:slategrey;text-align:Left;"><strong>@file.Title</strong></h2>
-                        <p id="p_text">
-                            @{
-                                if (file.Description.Length > 400)
-                                {
-                                    @Html.Raw(HttpUtility.HtmlDecode(file.Description.Substring(0, 399) + "&hellip;"))
-                                }
-                                else
-                                {
-                                    @Html.Raw(HttpUtility.HtmlDecode(file.Description))
-                                }
+                    else if (file.FileName.Contains(".doc"))
+                    {
+                        <img src="~/Content/Images/doc_icon.png" style="height: 100px; width: auto;"/>
+                    }
+
+
+                }
+            </div>
+            <div class="col-md-10">
+                <div>
+                    <h2 style="color: slategrey; text-align: Left;"><strong>@file.Title</strong>
+                    </h2>
+                    <p id="p_text">
+                        @{
+                            if (file.Description.Length > 400)
+                            {
+                                @Html.Raw(HttpUtility.HtmlDecode(file.Description.Substring(0, 399) + "&hellip;"))
                             }
-                        </p>
-                        <button class="btn btn-md btn-success text-right" style="margin-left:42%;">View File</button>
-                    </div>
+                            else
+                            {
+                                @Html.Raw(HttpUtility.HtmlDecode(file.Description))
+                            }
+                        }
+                    </p>
+                    <button class="btn btn-md btn-success text-right" style="margin-left: 42%;">View File</button>
                 </div>
+            </div>
 
         </div>
-                            }
-                        }
+    }
+}
