--- a/Praesidium/Praesidium/Views/File/Show.cshtml
+++ b/Praesidium/Praesidium/Views/File/Show.cshtml
@@ -5,7 +5,16 @@
 
 <h2>View file @Model.Title</h2>
 
-<div class="col-md-6">
+<div>
     <iframe src="https://docs.google.com/gview?url=@Url.Action("File", "Download", new {id = Model.RecId}, Request.Url.Scheme)?pid=explorer&efh=false&a=v&chrome=false&embedded=true" height="580" width="480"></iframe>
+</div>
+<div>
+    <div class="row">
+        <strong>Title:</strong> @Model.Title<br />
+        <strong>File Name:</strong> @Model.FileName<br/>
+        <strong>Description:</strong> @Model.Description
+        <strong>Date Added:</strong> @Model.DateUploaded.ToString();
+
+    </div>
 </div>
 
