grammar errors & context updated

--- a/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
@@ -12,7 +12,7 @@
 
             <p>
                 <h1><strong>The dangers of the Internet</strong></h1>
-                Cyber Security is a serious topic that nearly everyone deals with on a daily basis. Being safe online is of huge importance. This situation is life or death some people. Every single day children, parents and experts battle the bad guys. Consequenses of not being safe online could vary from loss of reputation, financial loss all the way to bodily harm and trafficking. The danger is real and must not be ignored. 
+                Cyber Security is a serious topic that nearly everyone deals with on a daily basis. Being safe online is of huge importance. This situation is life or death some people. Every single day children, parents and experts battle the bad guys. Consequences of not being safe online could vary from loss of reputation, financial loss all the way to bodily harm, and trafficking. The danger is real and must not be ignored. 
                 
             </p>
 
