--- a/Praesidium/Praesidium/Views/CyberSecurity/LawEnforcement.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/LawEnforcement.cshtml
@@ -8,7 +8,7 @@
         <h2 id="headers"><strong>Law Enforcement's Role in Cyber Security</strong></h2>
         <p id="p_text">
            Law Enforment plays a very large and important role in the protection of children online. Law Enforment's main goal is education of the general public 
-            and thier main way of doing this is by doing talks in schools and at kids clubs. They also provide resources like websites, fourms and other informational 
+            and their main way of doing this is by doing talks in schools and at kids clubs. They also provide resources like websites, fourms and other informational 
             resources for parents and children alike.
         </p>
     </div>
