--- a/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
@@ -17,7 +17,7 @@
         <h1 id="headers" class="align-left">Cyber Security for Teachers</h1>
         <p id="p_text">
             This is a page where teachers and other educators can learn tips and read 
-            articles and also access useful links to help educate thier students online. 
+            articles and also access useful links to help educate their students online. 
         </p>
 
     </div>
