--- a/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Teachers.cshtml
@@ -30,11 +30,11 @@
             <div class="col-md-12">
                 <h1 id=" headers">Teachers</h1>
                 <p class="lead" id="p_text">
-                    Teachers are some of the most influential people on today’s youth. Kids spend a majority of their time at
-                    school, in the early parts of their life. These young kids are also the most vulnerable to human trafficking
-                    because they do not know any better and they physically cannot do much against an attacker. Because
-                    of this, it is so important for teachers to be fully aware of the dangers of human trafficking and the signs
-                    of a possible attack, in order to educate our youth. This page contains information and resources that
+                    Teachers are some of the most influential people on today’s youth. In the early parts of their life, kids spend a majority of their time at
+                    school. These young kids are also the most vulnerable to human trafficking
+                    because they do not know any better and they physically cannot do much against an attacker. In order to educate our youth, 
+                    it is important for teachers to be fully aware of the dangers of human trafficking 
+                    and the signs of a possible attack. This page contains information and resources that
                     will give content to our educators so that they can learn and pass on the information to their students.
                 </p>
             </div>
