--- a/Praesidium/Praesidium/Views/trafficking/Youth.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Youth.cshtml
@@ -28,8 +28,9 @@
             <div class="col-md-12">
                 <h1 id="headers">Youth</h1>
                 <p class="lead" id="p_text">
-                    Youth are some of the most vulnerable targets out there when it comes to human trafficking. Because of this, we must take extra precaution
-                    in protecting our children and making sure they know how to protect themselves. This page will help do that.
+                    Youth are some of the most vulnerable targets out there when it comes to human trafficking. This page will help them learn how take extra precaution and how to 
+                    to protect themselves.
+                   
                 </p>
             </div>
         </div>
