--- a/Praesidium/Praesidium/Views/trafficking/Index.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Index.cshtml
@@ -32,7 +32,7 @@
                 of persons, by means of the threat or use of force or other forms of coercion, of abduction, of fraud, of deception, of the abuse of power or of 
                 a position of vulnerability or of the giving or receiving of payments or benefits to achieve the consent of a person having control over another 
                 person, for the purpose of exploitation. Exploitation shall include, at a minimum, the exploitation of the prostitution of others or other forms 
-                of sexual exploitation, forced labour or services, slavery or practices similar to slavery, servitude or the removal of organs
+                of sexual exploitation, forced labour or services, slavery or practices similar to slavery, servitude or the removal of organs.
             </p>
 
             <h2 id="headers"> Why Does It Happen?</h2>
