Solutions corrected on Footer

--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -81,7 +81,7 @@
                 <div class="row">
                     <div class="col-md-1 col-sm-1 col-lg-1"></div>
                     <div class="col-md-5 item" style="color: white; text-align: center;">
-                        <h3>TCS Soltuions</h3>
+                        <h3>TCS Solutions</h3>
                         <p>We are a devoted group of developers looking to make the world a safer and more informed place for adults and children alike.</p>
                     </div>
                     <div class="col-md-2 item" style="color: white; text-align: center;">
