--- a/Praesidium/Praesidium/Views/Shared/_Navigation.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Navigation.cshtml
@@ -4,11 +4,11 @@
     $(function () {
         $(".dropdown").hover(
                 function () {
-                    $('.dropdown-menu', this).stop(true, true).fadeIn("fast");
+                    $('.dropdown-menu', this).stop(true, true).fadeIn(1000);
                     $(this).toggleClass('open');
                 },
                 function () {
-                    $('.dropdown-menu', this).stop(true, true).fadeOut("fast");
+                    $('.dropdown-menu', this).stop(true, true).fadeOut(1000);
                     $(this).toggleClass('open');
                 });
     });
