--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -34,24 +34,55 @@ gapi.analytics.ready(function() {
   });
 
 
-  /**
-   * Create a new ViewSelector instance to be rendered inside of an
-   * element with the id "view-selector-container".
-   */
-  var viewSelector = new gapi.analytics.ViewSelector({
-    container: 'view-selector-container'
+    /**
+     * Create a ViewSelector for the first view to be rendered inside of an
+     * element with the id "view-selector-1-container".
+     */
+  var viewSelector1 = new gapi.analytics.ViewSelector({
+      container: 'view-selector-1-container'
   });
 
-  // Render the view selector to the page.
-  viewSelector.execute();
+    /**
+     * Create a ViewSelector for the second view to be rendered inside of an
+     * element with the id "view-selector-2-container".
+     */
+  var viewSelector2 = new gapi.analytics.ViewSelector({
+      container: 'view-selector-2-container'
+  });
 
+    // Render both view selectors to the page.
+  viewSelector1.execute();
+  viewSelector2.execute();
+
+    /**
+ * Create the first DataChart for top countries over the past 30 days.
+ * It will be rendered inside an element with the id "chart-1-container".
+ */
+  var dataChart1 = new gapi.analytics.googleCharts.DataChart({
+      query: {
+          metrics: 'ga:sessions',
+          dimensions: 'ga:country',
+          'start-date': '30daysAgo',
+          'end-date': 'yesterday',
+          'max-results': 6,
+          sort: '-ga:sessions'
+      },
+      chart: {
+          container: 'chart-1-container',
+          type: 'PIE',
+          options: {
+              width: '100%',
+              pieHole: 4 / 9
+          }
+      }
+  });
 
   /**
    * Create a new DataChart instance with the given query parameters
    * and Google chart options. It will be rendered inside an element
    * with the id "chart-container".
    */
-  var dataChart = new gapi.analytics.googleCharts.DataChart({
+  var dataChart2 = new gapi.analytics.googleCharts.DataChart({
     query: {
       metrics: 'ga:sessions',
       dimensions: 'ga:date',
@@ -59,7 +90,7 @@ gapi.analytics.ready(function() {
       'end-date': 'yesterday'
     },
     chart: {
-      container: 'chart-container',
+      container: 'chart-2-container',
       type: 'LINE',
       options: {
         width: '100%'
@@ -68,16 +99,25 @@ gapi.analytics.ready(function() {
   });
 
 
-  /**
-   * Render the dataChart on the page whenever a new view is selected.
-   */
-  viewSelector.on('change', function(ids) {
-    dataChart.set({query: {ids: ids}}).execute();
+    /**
+     * Update the first dataChart when the first view selecter is changed.
+     */
+  viewSelector1.on('change', function (ids) {
+      dataChart1.set({ query: { ids: ids } }).execute();
+  });
+
+    /**
+     * Update the second dataChart when the second view selecter is changed.
+     */
+  viewSelector2.on('change', function (ids) {
+      dataChart2.set({ query: { ids: ids } }).execute();
   });
 
 });
 </script>
 
-    <div id="embed-api-auth-container"></div>
-    <div id="chart-container"></div>
-    <div id="view-selector-container"></div>
+<div id="embed-api-auth-container"></div>
+<div id="chart-1-container"></div>
+<div id="chart-2-container"></div>
+<div id="view-selector-1-container"></div>
+<div id="view-selector-2-container"></div>
