chart type change

--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -69,7 +69,7 @@ gapi.analytics.ready(function() {
       },
       chart: {
           container: 'chart-1-container',
-          type: 'PIE',
+          type: 'LINE',
           options: {
               width: '100%',
               pieHole: 4 / 9
@@ -119,5 +119,5 @@ gapi.analytics.ready(function() {
 <div id="embed-api-auth-container"></div>
 <div id="chart-1-container"></div>
 <div id="chart-2-container"></div>
-<div id="view-selector-1-container"></div>
+<div id="view-selector-1-container"></div> <br />
 <div id="view-selector-2-container"></div>
