another chart change

--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -69,7 +69,7 @@ gapi.analytics.ready(function() {
       },
       chart: {
           container: 'chart-1-container',
-          type: 'LINE',
+          type: 'PIE',
           options: {
               width: '100%',
               pieHole: 4 / 9
