--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -60,9 +60,8 @@ gapi.analytics.ready(function() {
  */
   var timeline = new gapi.analytics.googleCharts.DataChart({
       query: {
-          'ids': 'ga:1234',
-          'dimensions': 'ga:country',
-          'metrics': 'ga:sessions',
+          dimensions: 'ga:country',
+          metrics: 'ga:sessions',
           'start-date': '30daysAgo',
           'end-date': 'yesterday',
       },
