--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -60,10 +60,10 @@ gapi.analytics.ready(function() {
  */
   var timeline = new gapi.analytics.googleCharts.DataChart({
       query: {
-          dimensions: 'ga:country',
           metrics: 'ga:sessions',
+          dimensions: 'ga:country',
           'start-date': '30daysAgo',
-          'end-date': 'yesterday',
+          'end-date': 'yesterday'
       },
       chart: {
           type: 'GEO',
