another query change.....

--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -60,6 +60,7 @@ gapi.analytics.ready(function() {
  */
   var timeline = new gapi.analytics.googleCharts.DataChart({
       query: {
+          ids: 'ga:143138137',
           metrics: 'ga:sessions',
           dimensions: 'ga:country',
           'start-date': '30daysAgo',
