changing display mode

--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -70,7 +70,7 @@ gapi.analytics.ready(function() {
           type: 'GEO',
           container: 'timeline',
           options: {
-              displayMode: 'markers'
+              displayMode: 'auto'
           }
       }
   });
