--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -70,7 +70,8 @@ gapi.analytics.ready(function() {
           type: 'GEO',
           container: 'timeline',
           options: {
-              displayMode: 'auto'
+              displayMode: 'auto',
+              width: '100%'
           }
       }
   });
