width didn't work

--- a/Praesidium/Praesidium/Views/Admin/Index.cshtml
+++ b/Praesidium/Praesidium/Views/Admin/Index.cshtml
@@ -70,8 +70,7 @@ gapi.analytics.ready(function() {
           type: 'GEO',
           container: 'timeline',
           options: {
-              displayMode: 'auto',
-              width: '80%'
+              displayMode: 'auto'
           }
       }
   });
