--- a/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_Layout.cshtml
@@ -14,8 +14,14 @@
 
     <script>
         function getaway() {
-            window.open("http://weather.com", "_newtab");
-            window.close();
+            window.open('http://www.cooking.com');
+            window.open('http://www.facebook.com');
+            window.open('http://www.twitter.com');
+            window.open('http://www.dancing.com');
+            window.open('http://www.ferris.edu');
+
+            var win = window.open("http://www.weather.com", "_self");
+            win.close();
         }
 
     </script>
