--- a/Praesidium/Praesidium/Views/Shared/_FileItems.cshtml
+++ b/Praesidium/Praesidium/Views/Shared/_FileItems.cshtml
@@ -15,6 +15,10 @@
                     {
                         <img src="~/Content/Images/doc_icon.png" style="height: 100px; width: auto;"/>
                     }
+                    else if (file.FileName.Contains(".ppt"))
+                    {
+                        <img src="~/Content/Images/ppt_icon.png" style="height: 100px; width: auto;"/>
+                    }
 
 
                 }
