--- a/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
@@ -3,15 +3,12 @@
     ViewBag.Title = "Quiz";
     int? quizId = ViewBag.QuizId;
 }
-
 <head>
     <h1 align="center"> Quizzes!</h1>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
 
 </head>
 <body>
@@ -20,18 +17,40 @@
         {
             case 1:
                 <div class="quizz-container" data-width="100%" data-iframe-title="QUIZ: Cyber Security: Youth" data-height="auto" data-quiz="380016"></div>
-                            <script src="//dcc4iyjchzom0.cloudfront.net/widget/loader.js" async></script>
+                <script src="//dcc4iyjchzom0.cloudfront.net/widget/loader.js" async></script>
 
                 break;
             case 2:
                 <div class="quizz-container" data-width="100%" data-iframe-title="QUIZ: Cyber Security: Teens" data-height="auto" data-quiz="380128"></div>
-                            <script src="//dcc4iyjchzom0.cloudfront.net/widget/loader.js" async></script>
+                <script src="//dcc4iyjchzom0.cloudfront.net/widget/loader.js" async></script>
                 break;
             case 3:
                 <div class="quizz-container" data-width="100%" data-iframe-title="QUIZ: Cyber Security:Law Enforcement" data-height="auto" data-quiz="380145"></div>
-                            <script src="//dcc4iyjchzom0.cloudfront.net/widget/loader.js" async></script>
+                <script src="//dcc4iyjchzom0.cloudfront.net/widget/loader.js" async></script>
                 break;
             default:
+                <div class="row">
+                    <div class="col-md-3 panel">
+                        <h3>
+                            QUIZ: Cyber Security: <br/>Youth
+                        </h3>
+                        @Html.ActionLink("Take the quiz now!", "Quiz", new { quizId = 1 }, new { @class = "btn btn-info", @title = "", @style = "margin-left: 50px; " })
+                    </div>
+                    <div class="col-md-1"></div>
+                    <div class="col-md-3 panel">
+                        <h3>
+                            QUIZ: Cyber Security: <br/>Teens
+                        </h3>
+                        @Html.ActionLink("Take the quiz now!", "Quiz", new { quizId = 2 }, new { @class = "btn btn-info", @title = "", @style = "margin-left: 50px; "})
+                    </div>
+                    <div class="col-md-1"></div>
+                    <div class="col-md-3 panel">
+                        <h3>
+                            QUIZ: Cyber Security: <br/>Law Enforcement
+                        </h3>
+                        @Html.ActionLink("Take the quiz now!", "Quiz", new { quizId = 3 }, new { @class = "btn btn-info", @title = "", @style = "margin-left: 50px;"})
+                    </div>
+                </div>
                 break;
         }
     }
