fixing file view page

--- a/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Cyber Security Page";
+    ViewBag.Title = "Cyber Security";
 }
 
 
@@ -19,7 +19,7 @@
         </div>
 
         <div class="col-md-4 align-center" id="borders">
-            <p class="h3" style="text-align:center;padding-top:8%;padding-bottom:5%;"><strong>Top 8 Tips for Kids to Protect Themselves Online</strong></p>
+            <p class="h3" style="text-align:center; padding-top:8%; padding-bottom:5%;"><strong>Top 8 Tips for Kids to Protect Themselves Online</strong></p>
             <ul class="align-left">
                 <li>Keep your computer up to date.</li>
                 <li>Never tell anyone where you live</li>
