--- a/Praesidium/Praesidium/Views/trafficking/Index.cshtml
+++ b/Praesidium/Praesidium/Views/trafficking/Index.cshtml
@@ -1,23 +1,14 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Trafficking";
 }
 
 <!-- add photo with effect -->
 
-@*<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;">*@
-<div class="container-fluid text-center" style="margin-bottom:3%;">
+<div class="container text-center" style="margin-bottom:3%;">
     <div class="row">
         <div class="col-md-12">
-            <video controls="controls" height="343" poster="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.JPG" width="610"><source src="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.mp4" /><br /><track kind="captions" label="Closed Caption" src="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.en.srt" srclang="en" type="text/plain" /></video>
-            @*<figure class="effect-caged">
-
-                    <img src="~/Content/Images/hands-tied.jpg"  style="width:100%;max-height:330px;" />
-                    <figcaption>
-                        <h1>What is <span>Human Trafficking?</span></h1>
-                    </figcaption>
-                </figure>*@
-
+            <video height="343" poster="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.JPG" style="min-width: 100%;" autoplay="autoplay"><source src="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.mp4" /><br /><track kind="captions" label="Closed Caption" src="https://www.dhs.gov/xlibrary/videos/blue-campaign/16_04_20_bc-infographic.en.srt" srclang="en" type="text/plain" /></video>
         </div>
 
     </div>
