--- a/Praesidium/Praesidium/Views/File/Show.cshtml
+++ b/Praesidium/Praesidium/Views/File/Show.cshtml
@@ -28,7 +28,12 @@
         <div class="col-md-4 col-sm-4 col-xs-4 text-right"><strong>Date Added:</strong></div><div class="col-md-8 col-sm-8 col-xs-8">@(Model.DateUploaded.Value.ToString("d"))</div>
     </div>
     <div class="row">
-        <div class="fb-share-button" data-href="@HttpContext.Current.Request.Url.AbsoluteUri" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=@HttpContext.Current.Request.Url.AbsoluteUri&amp;src=sdkpreparse">Share</a></div>
+        @*<div class="fb-share-button" data-href="@HttpContext.Current.Request.Url.AbsoluteUri" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=@HttpContext.Current.Request.Url.AbsoluteUri&amp;src=sdkpreparse">Share</a></div>*@
+        <ul class="share-buttons">
+            <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fpraesidium-beta.azurewebsites.net%2F&t=" title="Share on Facebook" target="_blank" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=' + encodeURIComponent(document.URL) + '&t=' + encodeURIComponent(document.URL)); return false;"><img alt="Share on Facebook" src="images/social_flat_rounded_rects_svg/Facebook.svg"></a></li>
+            <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Fpraesidium-beta.azurewebsites.net%2F&text=:%20http%3A%2F%2Fpraesidium-beta.azurewebsites.net%2F" target="_blank" title="Tweet" onclick="window.open('https://twitter.com/intent/tweet?text=' + encodeURIComponent(document.title) + ':%20'  + encodeURIComponent(document.URL)); return false;"><img alt="Tweet" src="images/social_flat_rounded_rects_svg/Twitter.svg"></a></li>
+            <li><a href="https://plus.google.com/share?url=http%3A%2F%2Fpraesidium-beta.azurewebsites.net%2F" target="_blank" title="Share on Google+" onclick="window.open('https://plus.google.com/share?url=' + encodeURIComponent(document.URL)); return false;"><img alt="Share on Google+" src="images/social_flat_rounded_rects_svg/Google+.svg"></a></li>
+        </ul>
     </div>
 </div>
 <div class="col-md-6">
