--- a/Praesidium/Praesidium/Views/File/Show.cshtml
+++ b/Praesidium/Praesidium/Views/File/Show.cshtml
@@ -3,17 +3,7 @@
     ViewBag.Title = "View";
     var srcURL = @"https://docs.google.com/gview?url=http://praesidium-beta.azurewebsites.net/Download/File/ " + Model.RecId + "?pid=explorer&efh=false&a=v&chrome=false&embedded=true";
 }
-<div id="fb-root"></div>
-<script>
-(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-<h2>Viewing file @Model.Title</h2>
-
+<div class="row text-center"><h2>Viewing file @Model.Title</h2></div>
 <div class="col-md-6">
     <div class="row">
         <div class="col-md-4 col-sm-4 col-xs-4 text-right"><strong>Title:</strong></div><div class="col-md-8 col-sm-8 col-xs-8">@Model.Title</div>
@@ -27,7 +17,15 @@
     <div class="row">
         <div class="col-md-4 col-sm-4 col-xs-4 text-right"><strong>Date Added:</strong></div><div class="col-md-8 col-sm-8 col-xs-8">@(Model.DateUploaded.Value.ToString("d"))</div>
     </div>
-    <div class="row text-center">
+    <div class="row">
+        <div class="col text-center">
+            @Html.ActionLink("Download this file", "File", "Download", new { id = Model.RecId, @class = "btn btn-info" }, null)
+        </div>
+        <div class="col text-center">
+            <a href="https://docs.google.com/gview?url=@Url.Action("File", "Download", new {id = Model.RecId}, Request.Url.Scheme)" class="btn btn-info">View full screen</a>
+        </div>
+    </div>
+    <div class="row col text-center">
         @*<div class="fb-share-button" data-href="@HttpContext.Current.Request.Url.AbsoluteUri" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=@HttpContext.Current.Request.Url.AbsoluteUri&amp;src=sdkpreparse">Share</a></div>*@
         <ul class="share-buttons">
             <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fpraesidium-beta.azurewebsites.net%2F&t=" title="Share on Facebook" target="_blank" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=' + encodeURIComponent(document.URL) + '&t=' + encodeURIComponent(document.URL)); return false;"><img alt="Share on Facebook" src="/Content/Images/Facebook.svg"></a></li>
@@ -39,5 +37,4 @@
 <div class="col-md-6">
     <iframe src="@srcURL" style="width: 100%; height: 580px;"></iframe>
 </div>
-
 
