--- a/Praesidium/Praesidium/Views/File/Show.cshtml
+++ b/Praesidium/Praesidium/Views/File/Show.cshtml
@@ -21,11 +21,11 @@
         <div class="col text-center">
             @Html.ActionLink("Download this file", "File", "Download", new { id = Model.RecId }, new {@class="btn btn-info"})
         </div>
-        <div class="col text-center">
+        <div class="col col-md-6 text-center">
             <a href="https://docs.google.com/gview?url=@Url.Action("File", "Download", new {id = Model.RecId}, Request.Url.Scheme)" class="btn btn-info">View full screen</a>
         </div>
     </div>
-    <div class="row col text-center">
+    <div class="row col col-md-6 text-center">
         @*<div class="fb-share-button" data-href="@HttpContext.Current.Request.Url.AbsoluteUri" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=@HttpContext.Current.Request.Url.AbsoluteUri&amp;src=sdkpreparse">Share</a></div>*@
         <ul class="share-buttons">
             <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fpraesidium-beta.azurewebsites.net%2F&t=" title="Share on Facebook" target="_blank" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u=' + encodeURIComponent(document.URL) + '&t=' + encodeURIComponent(document.URL)); return false;"><img alt="Share on Facebook" src="/Content/Images/Facebook.svg"></a></li>
