--- a/Praesidium/Praesidium/Content/bootstrap.css
+++ b/Praesidium/Praesidium/Content/bootstrap.css
@@ -6162,7 +6162,7 @@ body.modal-open,
   margin: 1px;
   text-indent: -999px;
   cursor: pointer;
-  border: 1px solid #ffffff;
+  border: 1px solid #CECECE;
   border-radius: 10px;
 }
 
@@ -6170,7 +6170,7 @@ body.modal-open,
   width: 12px;
   height: 12px;
   margin: 0;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 
 .carousel-caption {
