All images are responsive, and added a z-index to the quick exit button

--- a/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Adults.cshtml
@@ -2,12 +2,12 @@
     ViewBag.Title = "Adults";
 }
 
-<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;min-height:300px;">
+<div class="container-fluid img-responsive" id="photo_cont"  style="margin-bottom:3%;">
     <div class="row">
         <div class="col-md-12">
-            <figure class="effect-caged">
-                <img src="~/Content/Images/Cyber Final.png" style="width:100%;max-height:330px;" />              
-            </figure>
+          
+                <img src="~/Content/Images/Cyber Final.png" class="img-responsive" style="width:100%;max-height:330px;" />              
+           
         </div>
     </div>
 </div>
