--- a/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Quiz.cshtml
@@ -4,7 +4,7 @@
     int? quizId = ViewBag.QuizId;
 }
 <head>
-    <h1 align="center"> Quizzes!</h1>
+    <h1 align="center"> Quizzes</h1>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
