--- a/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Resources.cshtml
@@ -2,8 +2,10 @@
 @{
     ViewBag.Title = "Resources";
 }
+<div class="photo-container img-responsive">
+    <img src="~/Content/Images/pic4.png" style=" max-height:330px; width:100%;border-radius:22px 22px 22px 22px; margin-top:-15px;" />
+</div>
 
-<img src="~/Content/Images/pic4.png" style="height:300px; width:100%;border-radius:22px 22px 22px 22px; margin-top:-15px;" />
 <div class="row">
     <div class="col-md-8">
         <h2 id="headers"><strong>Resource Help</strong></h2>
