--- a/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Teachers.cshtml
@@ -2,10 +2,10 @@
     ViewBag.Title = "Teachers";
 }
 
-<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;min-height:300px;">
+<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;">
     <div class="row">
         <div class="col-md-12">
-            <figure class="effect-caged">
+            <figure class="effect-caged img-responsive">
                 <img src="~/Content/Images/teacher.png" style="width:100%;max-height:330px;" />
             </figure>
         </div>
