--- a/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
+++ b/Praesidium/Praesidium/Views/CyberSecurity/Youth.cshtml
@@ -2,10 +2,10 @@
     ViewBag.Title = "Youth";
 }
 
-<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;min-height:300px;">
+<div class="container-fluid" id="photo_cont" style="margin-bottom:3%;">
     <div class="row">
         <div class="col-md-12">
-            <figure class="effect-caged">
+            <figure class="effect-caged img-responsive">
                 <img src="~/Content/Images/cyber_security_1.png" style="width:100%;max-height:330px;" />
             </figure>
         </div>
@@ -16,7 +16,9 @@
     <div class="col-md-8">
         <h1 id="headers" class="align-left">Cyber Security for Youth</h1>
         <p id="p_text">
-            This is a page where youth (thats you!) can learn about being safe online!
+            This is a page where youth (thats you!) can learn about being safe online! One of the most important things to make sure you are taking the right steps to
+            be safe online. There are some major no-nos that you can avoid by following a few safety rules while using the computer. These rules along with some quick safety tips
+            can help make sure you and your friends stay safe.
         </p>
 
     </div>
